loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: too many arguments for method estFaceMur: ()Boolean
while(estFaceMur(false)) {
                ^